--- a/controls/scss/customizer.scss
+++ b/controls/scss/customizer.scss
@@ -33,7 +33,6 @@
 }
 .kirki-control-type-dimensions li input{
 	border-left:none;
-	-webkit-border-radius:0;
 	border-radius:0;
 	padding:4px 0
 }
@@ -46,13 +45,11 @@
 	background-color:#fff;
 	padding:0;
 	outline:none;
-	-webkit-border-radius:0 3px 3px 0;
 	border-radius:0 3px 3px 0;
 	cursor:pointer
 }
 .kirki-control-type-dimensions li:first-child input{
 	border-left:1px solid #a4afb7;
-	-webkit-border-radius:3px 0 0 3px;
 	border-radius:3px 0 0 3px
 }
 .kirki-control-type-dimensions .kirki-control-dimension-label{
@@ -103,6 +100,8 @@
 }
 
 .customize-control-kirki-multicheck ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
   }
 
@@ -132,7 +131,6 @@
   .kirki-units-choices
   {
 	  -webkit-box-flex:1;
-	  -webkit-flex-grow:1;
 	  -ms-flex-positive:1;
 	  flex-grow:1;
 	  text-align:right
